--- a/src/main/sass/sws/murcs/styles/materialDesign/global/comboBox.sass
+++ b/src/main/sass/sws/murcs/styles/materialDesign/global/comboBox.sass
@@ -8,6 +8,8 @@
   -fx-background-radius: 1px
   -fx-effect: dropshadow(two-pass-box, rgba(0,0,0,0.25), 4, 0.0, 0, 1)
 
+.combo-box:disabled
+  -fx-opacity: 1.0
 
 .combo-box:pressed
   -fx-effect: dropshadow(two-pass-box, rgba(0,0,0,0.25), 8, 0.0, 0, 3)
@@ -16,6 +18,7 @@
 .combo-box:focused
   -fx-background-color: $combo-box-pressed-color
   -fx-background-insets: 0, 1
+
 
 .choice-box .list-view .list-cell .label
   -fx-text-fill: $black-text
